Resolve JPMS unit test errors, single reference for snakeyaml providers